view/global.css
/* ... */
.wall-item-container .wall-item-content .type-link img,
.type-link img, .type-video img, img.attachment-preview {
  max-width: 160px;
  max-height: 160px;
  float: left;
  margin-right: 10px;
}

.wall-item-container .wall-item-content .type-link img.attachment-image,
.type-link img.attachment-image, .type-video img.attachment-image  {
  max-width: 100%;
  max-height: initial;
  float: initial;
  margin-right: 0px;
}

.wall-item-emoji {
  margin-right: 5px;
}

.wall-item-like-expanded,
.wall-item-dislike-expanded,
.wall-item-attendyes-expanded,
.wall-item-attendno-expanded,
.wall-item-attendmaybe-expanded {
  margin: 0;
}

.wall-item-response {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.type-link blockquote, .type-video blockquote {
  margin-left: 0px;
  max-height: 160px;
  overflow: hidden;
  border-left: 0px;
  padding-left: 0px;
  font-size: 13px;
  line-height: normal;
}

.type-link .oembed, .type-video .oembed {
  font-size: 18px;
  font-weight: 300;
  line-height: normal;
}
.type-link img, .type-video img {
}

.type-video .embed_video {
  margin: 0em;
}

.type-link span.oembed + br, .type-video span.oembed + br,
.type-link a + br, .type-video a + br,
.type-link img + br, .type-video img + br{
  display: none;
}

.embed_video {
  float:left;
  margin: 1em;
  position: relative;
}

.embed_video.active {
  float: none;
}

.oembed.video .embed_video > div {
  position: absolute;
  top: 0px;
  left: 0px;
}
.embed_rich {
  display: block;
  transition: height .75s;
}

/* Shared Messages */

.shared_header {
  display: flex;
  justify-content: space-between;
  min-height: 32px;
  color: #999;
  border-top: 1px solid #D2D2D2;
  padding-top: 5px;
  margin-top: 5px;
}
.shared_header > .avatar {
  display: block;
  flex: 0 0 41px;
  margin-inline-end: 9px;
}
.shared_header > .avatar > img {
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
.shared_header > .metadata {
  flex: 1 0 auto;
}
.shared_header > .metadata > p {
  margin: 0;
}
.shared_header > .preferences {
  position: static;
  flex: 0 0 auto;
}

.shared_header a {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

blockquote.shared_content {
  margin-inline-start: 32px;
  color: #000;
  border: none;
}

/* Events */
.event-summary {
  margin: 0px 0px 10px 0px;
  font-weight: bold;
}

.vevent .event-summary {
  margin: 0px 0px 10px 0px;
}

.vevent .event-description {
  padding: 10px 0;
}

.event-label {
  font-weight: bold;
}

.settings-heading a:after{
  content: ' »';
}

#profile-photo-wrapper {
  clear: both;
  overflow: hidden;
}

#newmember-tips {
  margin-top: -3px;
  font-size: 1.2em;
}

/* headers */
h1, h2, h3, h4, h5, h6 {
  margin: 5px 0px 5px 0px;
  font-weight: normal;
  line-height: normal;
  text-rendering: optimizelegibility;
}

h1 {
  font-size: 31.5px;
}

h2 {
  font-size: 24.5px;
}

h3 {
  font-size: 20.5px;
}

h4 {
  font-size: 18px;
}

h5 {
  font-size: 16.5px;
}

h6 {
  font-size: 14.95px;
}

span.oembed, h4 {
  margin: 0px 0px 0px 0px;
}

code, key {
  display: inline;
  background-color: #eee;
  color: #666;
  padding: 0.2em;
  font-size: 0.85em;
  font-family: monospace;
}

/* fields help text */
.field .field_help {
  clear: left;
}

/* notifications unseen */
.notification-unseen { background-color: #cceeFF; }

/* autocomplete popup */
ul.acpopup {
  list-style: none;
  float: left;
  min-width: 160px;
  padding: 5px 0;
  margin: 2px 0 0;
}
nav .acpopup {
  width: 290px;
  max-height: 450px;
  max-width: 300px;
  overflow-y: auto;
  overflow-x: hidden;
  margin-top: 0px;
}
img.acpopup-img {
  float: left;
  width: 36px;
  height: 36px;
  margin-right: 5px;
  vertical-align: middle;
}
.acpopup-contactname {
  padding-top: 2px;
  font-weight: bold;
  line-height: 1em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}
.acpopup-sub-text {
  color: #777;
  font-size: 0.833em;
  line-height: 1em;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}
.textcomplete-item a {
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  clear: both;
  white-space: nowrap;
  padding: 3px 20px;
  display: block;
}
.textcomplete-item a:hover {
  text-decoration: none;
}

/* plain text editor upload/select popup */

.fbrowser .path a, .fbrowser .path .btn-link { padding: 5px; }
.fbrowser .path a:before, .fbrowser .path .btn-link:before { content: "/"; padding-right: 5px;}
.fbrowser .folders ul { list-style-type: none; padding-left: 10px;}
.fbrowser .list { height: auto; overflow-y: hidden; margin: 10px 0px; }
.fbrowser.photo .photo-album-image-wrapper { float: left; }
.fbrowser.photo a img, .fbrowser.photo .btn-link img { height: 48px; }
.fbrowser.photo a p, .fbrowser.photo .btn-link p { display: none;}
.fbrowser.attachment .photo-album-image-wrapper { float:none;  white-space: nowrap; }
.fbrowser.attachment img { display: inline; }
.fbrowser.attachment p  { display: inline; white-space: nowrap; }
.fbrowser .upload { clear: both; padding-top: 1em;}
.fbrowser .error { background: #ffeeee; border: 1px solid #994444; color: #994444; padding: 0.5em;}
.fbrowser .error .close { float: right; font-weight: bold; }
.fbrowser .error.hidden { display: none; }

a {
  cursor: pointer;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  border: 0;
}

.identity-match-wrapper {
  float: left;
  padding: 10px;
  width: 120px;
  height: 140px;
  margin-bottom: 20px;
}

.identity-match-photo {
  float: left;
  text-align: center;
  width: 120px;
}

.identity-match-name {
  text-align: center;
}

.identity-match-details {
  float: left;
  text-align: center;
  width: 120px;
  overflow: hidden;
  font-size: 10px;
  font-weight: 500;
  color: #999999;
}
/* ... */

